kjapp yolo-fix - setter bakgrunnsfarge basert på miljø (test vs prod)

--- a/src/main/resources/admin-ui/ferdigstillOppgave-form.html
+++ b/src/main/resources/admin-ui/ferdigstillOppgave-form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ferdigstill oppgave - FAGER notifikasjon</title>
+    <link rel="stylesheet" href="/styles.css" type="text/css" />
 </head>
 <body>
 <h1>Ferdigstill oppgave</h1>
