--- a/src/main/resources/admin-ui/softDeleteSak-form.html
+++ b/src/main/resources/admin-ui/softDeleteSak-form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Slett sak - FAGER notifikasjon</title>
+    <link rel="stylesheet" href="/styles.css" type="text/css" />
 </head>
 <body>
 <h1>Slett sak</h1>
