--- a/src/main/resources/admin-ui/ferdigstillOppgave-form.html
+++ b/src/main/resources/admin-ui/ferdigstillOppgave-form.html
@@ -9,8 +9,8 @@
 <h1>Ferdigstill oppgave</h1>
 <form method="post" action="/ferdigstillOppgave">
     <div>
-        <label for="oppgaveId">OppgaveId: </label>
-        <input type="text" id="oppgaveId" name="oppgaveId" size="40">
+        <label for="foresporselId">ForespørselID: </label>
+        <input type="text" id="foresporselId" name="foresporselId" size="40">
     </div>
     <input type="submit">
 </form>
