--- a/src/main/resources/admin-ui/ferdigstillSaker-form.html
+++ b/src/main/resources/admin-ui/ferdigstillSaker-form.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ferdigstill oppgave - FAGER notifikasjon</title>
+    <title>Ferdigstill saker - FAGER notifikasjon</title>
     <link rel="stylesheet" href="/styles.css" type="text/css" />
 </head>
 <body>
-<h1>Ferdigstill oppgaver</h1>
-<form method="post" action="/ferdigstillOppgaver">
+<h1>Ferdigstill saker</h1>
+<form method="post" action="/ferdigstillSaker">
     <div>
         <label for="foresporselIdInput">ForespørselIder: </label>
     </div>
